@@ -249,8 +249,10 @@ Actions
 
 Apart from the action names listed below, all actions starting with a '!' will
 be available as an external command. External commands can contain variable
-names that will be substituted before the command is run. Valid variable names
-are:
+names that will be substituted before the command is run. By default, commands
+are run in the foreground with their console output shown, if they should be
+run in the background wit no output prefix the command with '@'. Valid
+variable names are:
 
 .Browsing state variables
 [frame="none",grid="none",cols="25<m,75<"]
@@ -280,7 +282,8 @@ put in either the .gitconfig or .git/config file:
 	gitk-bg = !"gitk HEAD --not $(git rev-parse --remotes) &"
 	publish = !"for i in origin public; do git push $i; done"
 [tig "bind"]
-	generic = V !git gitk-bg
+	# @-prefix means that the console output will not be shown.
+	generic = V !@git gitk-bg
 	generic = > !git publish
 --------------------------------------------------------------------------
 
